Increase question box height on mobile to avoid overlap

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -163,7 +163,7 @@ footer .footer {
 
     @media screen and (max-width: 768px) {
       padding: 0 0.5rem;
-      height: 120vh;
+      height: 150vh;
     }
     .column {
       padding: 3rem;
